Elaborando página principal do site

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 	<body>
 
+		<!--Inicio container-->
 		<div id="container">
+			<!--Inicio topo-->
 			<div id="topo">
 				<div id="logo">
 					<img src="imagens/logo.png">
@@ -23,7 +25,7 @@
 					<li class="ciencia"><a href="">Ciência</a></li>
 					<li class="fotos"><a href="">Fotos</a></li>
 				</ul>
-			</div>
+			</div><!--fim topo_-->
 			<div id="conteudo">
 				<div id="menu">
 					<h3>Entrevistas</h3>
@@ -40,21 +42,57 @@
 					<div>
 						<h3>News!</h3>
 						<div id="news">
-						<label for="email">Email:</label><br>
-						<input type="text" name="input_email" placeholder="E-mail" id="email">
-						<input type="submit" value="Cadastar" id="botao">
+							<label for="email">Email:</label><br>
+							<input type="text" name="input_email" placeholder="E-mail" id="email">
+							<input type="submit" value="Cadastar" id="botao">
 						</div>
 					</div>
 				</div>
 
-					<div id="conteudo_secundario">
+				<div id="conteudo_secundario">
 						<h3>Destaque</h3>
 						<div class="caixa_texto">
+							<h5>Mudança nos taxis</h5>
 							<img src="imagens/taxi.jpg" class="imagem">
 							<p class="texto">
 								Taxis nos EUA vão deixar de ser amarelos a partir de 2021.
 							</p>
 							<a href="" class="link">Leia mais!</a>
+						</div>
+						<h3>Notícias Recentes</h3>
+						<div class="caixa_texto">
+							<img src="imagens/tecnologia.jpg" class="imagem_pequena">
+							<div class="mini_caixa">
+								<a href=""><h6>Novas Tecnologias</h6></a>
+								<p class="texto_pequeno">
+									Conheça tecnologias que estão mudando a vida das pessoas.
+								</p>
+							</div>
+							<hr>
+							<img src="imagens/mundo.jpg" class="imagem_pequena">
+							<div class="mini_caixa">
+								<a href=""><h6>Parlamento aprova</h6></a>
+								<p class="texto_pequeno">
+									Parlamento aprova lei de inclusão digital.
+								</p>
+							</div>
+							<hr>
+							<img src="imagens/taxi.jpg" class="imagem_pequena">
+							<div class="mini_caixa">
+								<a href=""><h6>Mudança nos taxis dos EUA</h6></a>
+								<p class="texto_pequeno">
+									Taxis deixarão de ser amrelos a partir de 2021.
+								</p>
+							</div>
+							<hr>
+							<img src="imagens/doutor.jpg" class="imagem_pequena">
+							<div class="mini_caixa">
+								<a href=""><h6>Entrevista com o Dr. Felipe Silva</h6></a>
+								<p class="texto_pequeno">
+									Dr. Felipe conta como é estar na linha de frente contra a COVID-19.
+								</p>
+							</div>
+
 						</div>
 				</div>	
 					<div id="conteudo_primario">
@@ -67,9 +105,39 @@
 							</p>
 							<a href="" class="link">Leia mais!</a>
 						</div>
-				</div>					
+							<h3>Mundo</h3>
+						<div class="caixa_texto_primario">
+							<img src="imagens/mundo.jpg" class="imagem_pequena">
+								<div class="mini_caixa">
+									<a href=""><h6>Crise no mundo</h6></a>
+									<p class="texto_pequeno">Com a intensificação da pandemia, países veem seus PIB's reduzirem e a ecônomia.</p>
+								</div>
+								<hr>
+								<img src="imagens/beckham.jpg" class="imagem_pequena">
+								<div class="mini_caixa">
+									<a href=""><h6>Beckham voltará aos gramados</h6></a>
+									<p class="texto_pequeno">Jogador inglês  provavelmente atuará no time em que ele é dono.</p>
+								</div>
+								<hr>
+								<img src="imagens/trump.jpg" class="imagem_pequena">
+								<div class="mini_caixa">
+									<a href=""><h6>Reforma na casa branca</h6></a>
+									<p class="texto_pequeno">O presidente Donald Trump planeja realizar a maior reforma da casa branca.</p>
+								</div>
+								<hr>
+								<img src="imagens/money.jpg" class="imagem_pequena">
+								<div class="mini_caixa">
+									<a href=""><h6>Como protejer seu dinheiro na crise</h6></a>
+									<p class="texto_pequeno">Conheça as técnicas de investimento seugro para o seu dinheiro.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div> <!--Fim do container-->
+			<div id="rodape">
+				<p>&copy; Copyright 2000-2018 Notícias Cidade</p>
 			</div>
-		</div>
 
 	</body>
 
